Work on sorting out the default config.

--- a/etc/myhadoop.conf
+++ b/etc/myhadoop.conf
@@ -19,7 +19,7 @@
 #   specific Hadoop version when using this installation of myHadoop unless
 #   they override on the command line.
 #
-#HADOOP_HOME=/opt/hadoop-1.2.1
+HADOOP_HOME=/opt/hadoop/1.2.1
 
 ################################################################################
 # Variable: MH_IPOIB_TRANSFORM 
@@ -30,7 +30,12 @@
 #   "node-0-1" can be accessed via IP over InfiniBand by "node-0-1.ibnet0",
 #   the transform would be "s/$/.ibnet0/"
 #
-#MH_IPOIB_TRANSFORM='s/$/.ibnet0/'
+#   Clemson's Palmetto has nodexxxx.palmetto.clemson.edu in node list.
+#
+#   IPOIB connected hostnames are: nodexxxx-ib0.palmetto.clemson.edu, so
+#   the transform for the Palmetto Cluster should be 's/\./-ib0./'
+#
+# MH_IPOIB_TRANSFORM='s/\./-ib0./'
 
 ################################################################################
 # Variable: MH_SCRATCH_DIR 
@@ -41,7 +46,7 @@
 #   within the context of the user's myHadoop execution environment.  This is 
 #   normally defined using the "-s" option when calling myhadoop-configure.
 #
-#MH_SCRATCH_DIR=/scratch/$USER
+MH_SCRATCH_DIR=/local_scratch/$USER
 
 ################################################################################
 # Variable: MH_PERSIST_DIR
@@ -53,7 +58,7 @@
 #   running myhadoop-configure.  NOTE THAT IF YOU SET THIS, ALL JOBS WILL BE 
 #   RUN IN PERSISTENT MODE unless the user explicitly requests -p ''
 #
-#MH_PERSIST_DIR=/lustre/$USER/hdfs
+MH_PERSIST_DIR=/newscratch/$USER/hdfs
 
 ################################################################################
 # Variable: HADOOP_CONF_DIR 
@@ -61,4 +66,4 @@
 #
 #   This is the location of the user's per-job Hadoop configuration directory.  
 #
-#HADOOP_CONF_DIR=$HOME/hadoop-conf.$PBS_JOBID
+HADOOP_CONF_DIR=$HOME/hadoop-conf.$(cut -d. -f1 <<< $PBS_JOBID)
