--- a/etc/myhadoop.conf
+++ b/etc/myhadoop.conf
@@ -58,7 +58,7 @@ MH_SCRATCH_DIR=/local_scratch/$USER
 #   running myhadoop-configure.  NOTE THAT IF YOU SET THIS, ALL JOBS WILL BE 
 #   RUN IN PERSISTENT MODE unless the user explicitly requests -p ''
 #
-MH_PERSIST_DIR=/newscratch/$USER/hdfs
+# MH_PERSIST_DIR=/newscratch/$USER/hdfs
 
 ################################################################################
 # Variable: HADOOP_CONF_DIR 
